<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/textViewNombre"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provincia"
        android:id="@+id/textViewProvincia"
        android:layout_below="@+id/textViewNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zona"
        android:id="@+id/textViewZona"
        android:layout_below="@+id/textViewProvincia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:id="@+id/textViewTipo"
        android:layout_below="@+id/textViewZona"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_above="@+id/textViewProvincia"
        android:layout_toRightOf="@+id/textViewNombre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextProvince"
        android:layout_above="@+id/textViewZona"
        android:layout_toRightOf="@+id/textViewNombre"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextZone"
        android:text=""
        android:layout_alignBottom="@+id/textViewZona"
        android:layout_alignLeft="@+id/editTextProvince"
        android:layout_alignStart="@+id/editTextProvince"
        android:layout_alignRight="@+id/editTextProvince"
        android:layout_alignEnd="@+id/editTextProvince" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextTipe"
        android:text=""
        android:layout_alignBottom="@+id/textViewTipo"
        android:layout_alignLeft="@+id/editTextProvince"
        android:layout_alignStart="@+id/editTextProvince"
        android:layout_alignRight="@+id/editTextProvince"
        android:layout_alignEnd="@+id/editTextProvince" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnClose" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:id="@+id/btnClose"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Borrar"
        android:id="@+id/btnDelete"
        android:layout_alignTop="@+id/btnSave"
        android:layout_toLeftOf="@+id/btnSave" />

</RelativeLayout>